tests/snapshots/examples_fixtures/type_system__failing__36_pure_context_time_only_rejects_io.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/36_pure_context_time_only_rejects_io.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/type_system/failing/36_pure_context_time_only_rejects_io.flx:4:5
  |
4 |     print("tick")
  |     ^^^^^^^^^^^^^
  |     ------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
